alignment fix

--- a/ui.css
+++ b/ui.css
@@ -122,7 +122,7 @@ p {
 div.text {
   color: #ffffff;
   font-size: 18px;
-   text-align: left;
+  text-align: justify;
 
 }
 div.texth {
